<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/colorPrimary">

    <RelativeLayout
        android:layout_weight="1"
        android:layout_height="0dp"
        android:layout_width="match_parent">

        <TextView
            android:id="@+id/createAccountTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/sf_pro_display_regular"
            android:text="@string/account_screen_title"
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryDark" />

    </RelativeLayout>

    <LinearLayout
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/avatarImageView"
            android:layout_weight="2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:srcCompat="@drawable/oval_empty_avatar" />

        <RelativeLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/sf_pro_display_regular"
                android:text="@string/change_photo"
                android:textSize="13sp"
                android:textColor="@color/colorPrimaryDark"/>

        </RelativeLayout>


    </LinearLayout>

    <RelativeLayout
        android:layout_weight="1"
        android:layout_height="0dp"
        android:layout_width="match_parent">

        <EditText
            android:id="@+id/firstNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_above="@+id/firstNameUnderline"
            android:background="@color/colorPrimary"
            android:fontFamily="@font/sf_pro_display_regular"
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryDark"

            android:hint="@string/first_name"
            android:textColorHint="@color/colorAccent"/>

        <ImageView
            android:id="@+id/firstNameUnderline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_alignParentBottom="true"
            app:srcCompat="@drawable/path" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_weight="1"
        android:layout_height="0dp"
        android:layout_width="match_parent">

        <EditText
            android:id="@+id/lastNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_above="@+id/lastNameUnderline"
            android:background="@color/colorPrimary"
            android:fontFamily="@font/sf_pro_display_regular"
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryDark"

            android:hint="@string/last_name"
            android:textColorHint="@color/colorAccent" />

        <ImageView
            android:id="@+id/lastNameUnderline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:srcCompat="@drawable/path" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="32dp"
            android:fontFamily="@font/sf_pro_display_medium"
            android:text="@string/saved_calculations"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_centerVertical="true"
            android:fontFamily="@font/sf_pro_display_medium"
            android:text="@string/about_yourself"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />

    </RelativeLayout>

    <ScrollView
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="0dp" >

        <TextView
            android:id="@+id/aboutYourselfTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp"
            android:fontFamily="@font/sf_pro_display_regular"
            android:textSize="13sp"
            android:lineSpacingExtra="3sp"
            android:textColor="@color/colorPrimaryDark" />

    </ScrollView>


    <fragment
        android:layout_weight="1"
        android:layout_height="0dp"
        android:layout_width="match_parent"/>

</LinearLayout>