<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/colorPrimary">

    <RelativeLayout
        android:layout_weight="1"
        android:layout_height="0dp"
        android:layout_width="match_parent">

        <TextView
            android:id="@+id/createAccountTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/sf_pro_display_regular"
            android:text="@string/create_account"
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryDark" />

    </RelativeLayout>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_width="0dp"/>

        <LinearLayout
            android:layout_weight="3"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_weight="2"
                android:layout_height="match_parent"
                android:layout_width="0dp">

                <EditText
                android:id="@+id/dayOfBirth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@color/colorPrimary"
                android:fontFamily="@font/sf_pro_display_regular"
                android:textSize="20sp"
                android:textColor="@color/colorPrimaryDark"

                android:hint="@string/_2digit_number_hint"
                android:textColorHint="@color/colorAccent"/>

                <ImageView
                    android:id="@+id/dayOfBirthUnderline"
                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:layout_marginTop="6dp"
                    android:layout_below="@+id/dayOfBirth"
                    app:srcCompat="@drawable/short_path" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_weight="2"
                android:layout_height="match_parent"
                android:layout_width="0dp">

                <EditText
                    android:id="@+id/monthOfBirth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@color/colorPrimary"
                    android:fontFamily="@font/sf_pro_display_regular"
                    android:textSize="20sp"
                    android:textColor="@color/colorPrimaryDark"

                    android:hint="@string/_2digit_number_hint"
                    android:textColorHint="@color/colorAccent" />

                <ImageView
                    android:id="@+id/monthOfBirthUnderline"
                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:layout_marginTop="6dp"
                    android:layout_below="@+id/monthOfBirth"
                    app:srcCompat="@drawable/short_path" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_weight="4"
                android:layout_height="match_parent"
                android:layout_width="0dp">

                <EditText
                    android:id="@+id/yearOfBirth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@color/colorPrimary"
                    android:fontFamily="@font/sf_pro_display_regular"
                    android:textSize="20sp"
                    android:textColor="@color/colorPrimaryDark"

                    android:hint="@string/_4digit_number_hint"
                    android:textColorHint="@color/colorAccent" />

                <ImageView
                    android:id="@+id/yearOfBirthUnderline"
                    android:layout_width="wrap_content"
                    android:layout_height="4dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_below="@+id/yearOfBirth"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/path" />

            </RelativeLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_width="0dp"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_weight="1"
        android:layout_height="0dp"
        android:layout_width="match_parent">

        <EditText
            android:id="@+id/firstNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_above="@+id/firstNameUnderline"
            android:background="@color/colorPrimary"
            android:fontFamily="@font/sf_pro_display_regular"
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryDark"

            android:hint="@string/first_name"
            android:textColorHint="@color/colorAccent"/>

        <ImageView
            android:id="@+id/firstNameUnderline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_alignParentBottom="true"
            app:srcCompat="@drawable/path" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_weight="1"
        android:layout_height="0dp"
        android:layout_width="match_parent">

        <EditText
            android:id="@+id/lastNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_above="@+id/lastNameUnderline"
            android:background="@color/colorPrimary"
            android:fontFamily="@font/sf_pro_display_regular"
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryDark"

            android:hint="@string/last_name"
            android:textColorHint="@color/colorAccent" />

        <ImageView
            android:id="@+id/lastNameUnderline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:srcCompat="@drawable/path" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_weight="1"
        android:layout_height="0dp"
        android:layout_width="match_parent">

        <EditText
            android:id="@+id/commentTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_above="@+id/commentUnderline"
            android:background="@color/colorPrimary"
            android:fontFamily="@font/sf_pro_display_regular"
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryDark"

            android:hint="@string/comment"
            android:textColorHint="@color/colorAccent" />

        <ImageView
            android:id="@+id/commentUnderline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:srcCompat="@drawable/path" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2" />

    <RelativeLayout
        android:layout_weight="1"
        android:layout_height="0dp"
        android:layout_width="match_parent">

        <Button
            android:id="@+id/saveResultButton"
            android:layout_width="wrap_content"
            android:layout_height="47dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/oval_shape_button"
            android:fontFamily="@font/sf_pro_display_medium"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:text="@string/save_result" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_weight="1"
        android:layout_height="0dp"
        android:layout_width="match_parent">

    <Button
        android:id="@+id/sendForDecryption"
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/oval_shape_button"
        android:fontFamily="@font/sf_pro_display_medium"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:text="Отправить на расшифровку" />

    </RelativeLayout>

    <fragment
        android:layout_weight="1"
        android:layout_height="0dp"
        android:layout_width="match_parent"/>

</LinearLayout>